fix spacing on main page

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  padding: 3rem 2rem;
+  padding: 3rem 3rem;
   border-top: 1px solid black;
   gap: 10%;
 }
@@ -30,6 +30,16 @@
   padding-bottom: 3rem;
 }
 
+@media (min-width:600px) {
+  .left-side {
+      width: 40%;
+  }
+
+  .right-side {
+    width: 60%;
+  }
+} 
+
 
 .image-placeholder img {
   width: 16rem;
@@ -44,6 +54,8 @@
   flex-direction: column;
   justify-content: space-around;
 }
+
+
 
 .right-side .summary {
   font-size: 1rem;
